<resources>
    <string name="app_name">KSDriver</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password"> forgot password ? </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_task">My Tasks</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="upcoming">Upcoming</string>
    <string name="today">Today</string>
    <string name="yes">YES</string>
    <string name="no">NO </string>
    <string name="ok">OK</string>
    <string name="are_you_sure">Are you sure you want \n to send an e-mail to \n  department@domain.com \n to inform that there is a \n  problem with this task?</string>
    <string name="are_you_sure_want_to_complete_task">Are you sure you want to \n complete this task? </string>
    <string name="are_you_sure_log_out">Are you sure want \n to logout from app? </string>
    <string name="please_enter_user_name">Please enter user name.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_first_name">Please enter first name.</string>
    <string name="please_enter_last_name">Please enter last name.</string>
    <string name="please_enter_contact">Please enter contact.</string>
    <string name="please_enter_department">Please enter department.</string>
    <string name="email_id">Email Id</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDBR9T1iQc45n9HjiEpIs2mhpQRzeZQA-A</string>
    <string name="enter_drop_line">Enter Drop Line</string>
    <string name="enter_pickup_point">Enter Pickup Point</string>
    <string name="google_directions_key">AIzaSyCGs52wU9ak85xLXGDyKFBUTgsq14wuiNA</string>
    <string name="book_diriver">Book Diriver</string>
    <string name="booking_history">Booking History</string>
    <string name="support">Support</string>
    <string name="term_and_condition">Term And Condition</string>
    <string name="register_your_car">Register Your car</string>
    <string name="register_your_driver">Register Your Driver</string>


    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="no_result_found">No result found</string>
    <string name="select_country">Select Country</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="plase_enter_your_mobile_number_to_proced">Plase enter your mobile \n number to proced</string>
    <string name="your_mobile">Your Mobile</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="your_linsence_no">Your Linsence No</string>
    <string name="apply_on_duty">Apply on Duty</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="register_your_car_">Register your car</string>
    <string name="select_car_type">Select car type</string>
    <string name="enter_car_no">Enter Car No</string>
    <string name="enter_car_model">Enter car model</string>
    <string name="licence_no">Licence No</string>
    <string name="no_selected_file">No selected file now</string>
    <string name="no_selected_file_">No selected file</string>
    <string name="payment_history">Payment History</string>
    <string name="welcome_to_our_team_n_you_are_on_duty_now">Welcome to our team \n  You are on duty now</string>
    <string name="city_not_available">City not available</string>

    <string-array name="Qnty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>
