<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Rahul Kumar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25-05-2018 03:00 PM" />

        <ImageView
            android:id="@+id/imgOnnOffDuaty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/selector_button"
            android:padding="@dimen/_5sdp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/opensans_bold"
        android:text="Plan your work"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/_16sdp" />


    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/time"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:hint="@string/start_time"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/gray_text_color"
        android:textColorHint="@color/gray_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/time"
        android:drawablePadding="@dimen/_10sdp"
        android:editable="false"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:hint="@string/end_time"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/gray_text_color"
        android:textColorHint="@color/gray_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_yello_button"
        android:fontFamily="@font/opensans_regular"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/apply_on_duty"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>